--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+<project
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+    xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>fr.jufab</groupId>
+    <artifactId>hystrixr4jlab-service</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <groupId>fr.jufab</groupId>
   <artifactId>hystrixr4jlab-service-hystrix</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <properties>
-    <maven.compiler.target>11</maven.compiler.target>
-    <version.wildfly>19.1.0.Final</version.wildfly>
-    <failOnMissingWebXml>false</failOnMissingWebXml>
-    <maven.compiler.source>11</maven.compiler.source>
-    <final.name>hystrixr4jlab-hystrix</final.name>
-  </properties>
+
   <dependencies>
-    <dependency>
-      <groupId>org.eclipse.microprofile</groupId>
-      <artifactId>microprofile</artifactId>
-      <version>3.3</version>
-      <type>pom</type>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>com.netflix.hystrix</groupId>
       <artifactId>hystrix-core</artifactId>
       <version>1.5.18</version>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.30</version>
-    </dependency>
   </dependencies>
-  <build>
-    <finalName>hystrixr4jlab</finalName>
-  </build>
+
   <profiles>
     <profile>
       <id>wildfly</id>
@@ -42,6 +28,7 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <build>
+        <finalName>hystrixr4jlab</finalName>
         <plugins>
           <plugin>
             <groupId>org.wildfly.plugins</groupId>
@@ -55,11 +42,13 @@
               </execution>
             </executions>
             <configuration>
-              <feature-pack-location>wildfly@maven(org.jboss.universe:community-universe)#${version.wildfly}</feature-pack-location>
+              <feature-pack-location>
+                wildfly@maven(org.jboss.universe:community-universe)#${version.wildfly}
+              </feature-pack-location>
               <layers>
                 <layer>jaxrs</layer>
-                <layer>cdi</layer>
                 <layer>jmx</layer>
+                <layer>microprofile-fault-tolerance</layer>
               </layers>
             </configuration>
           </plugin>
@@ -87,4 +76,5 @@
       </repositories>
     </profile>
   </profiles>
+
 </project>
